--- a/app/src/main/res/layout/activity_creer_chamionnat.xml
+++ b/app/src/main/res/layout/activity_creer_chamionnat.xml
@@ -15,7 +15,30 @@
         android:layout_height="wrap_content"
         android:inputType="textCapWords"
         />
-    
+
+    <Spinner
+        android:id="@+id/sp_nombre_de_joueur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </Spinner>
+
+    <Switch
+        android:id="@+id/sw_est_public"
+        android:text="Privé"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <EditText
+        android:hint="Mot de passe"
+        android:id="@+id/ed_mot_de_passe"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapWords"
+        />
+
     <Button
         android:id="@+id/btn_creer_championnat"
         android:layout_width="match_parent"
