--- a/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
+++ b/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
@@ -13,15 +13,14 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
+        android:padding="@dimen/activity_horizontal_margin"
+        android:background="@color/primary">
 
 
         <ImageView
-            android:layout_width="@dimen/logo_w_h"
-            android:layout_height="@dimen/logo_w_h"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_width="107dp"
+            android:layout_height="97dp"
+            android:src="@drawable/image_rugby" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,9 +60,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:background="@null"
             android:text="@string/btn_reset_password"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/btn_back"
@@ -72,7 +71,7 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="@string/btn_back"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
