--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.masquilierpemeja.rugbyfantasytop14.LoginActivity">
+    tools:context="com.masquilierpemeja.rugbyfantasytop14.Login.LoginActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/primary"
+        android:background="@color/secondaryLight"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="204dp">
+        tools:layout_editor_absoluteY="204dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:layout_width="246dp"
@@ -30,8 +31,8 @@
             android:layout_marginBottom="10dp"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColor="@color/secondaryDark"
+            android:textColorHint="@color/secondaryDark" />
 
         <EditText
             android:id="@+id/password"
@@ -40,8 +41,8 @@
             android:layout_marginBottom="10dp"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColor="@color/secondaryDark"
+            android:textColorHint="@color/secondaryDark" />
 
 
         <!-- Login Button -->
@@ -53,7 +54,7 @@
             android:layout_marginTop="20dip"
             android:background="@null"
             android:text="@string/btn_login"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/secondaryDark" />
 
         <Button
             android:id="@+id/btn_reset_password"
@@ -63,7 +64,7 @@
             android:background="@null"
             android:text="@string/btn_forgot_password"
             android:textAllCaps="false"
-            android:textColor="@color/white" />
+            android:textColor="@color/secondaryDark" />
 
 
         <com.google.android.gms.common.SignInButton
@@ -81,7 +82,7 @@
             android:background="@null"
             android:text="@string/btn_link_to_register"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/secondaryDark"
             android:textSize="15dp" />
 
 
