--- a/app/src/main/res/layout/activity_creer_chamionnat.xml
+++ b/app/src/main/res/layout/activity_creer_chamionnat.xml
@@ -19,7 +19,9 @@
     <Spinner
         android:id="@+id/sp_nombre_de_joueur"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="30dp">
+
 
     </Spinner>
 
@@ -28,6 +30,7 @@
         android:text="Privé"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="30dp"
         />
 
     <EditText
@@ -37,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapWords"
+        android:padding="30dp"
         />
 
     <Button
@@ -44,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Créer mon championnat"
+        android:background="@color/primary"
         />
 
     <ProgressBar
