--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.masquilierpemeja.rugbyfantasytop14.LoginActivity">
+    tools:context="com.masquilierpemeja.rugbyfantasytop14.Login.LoginActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/primary"
+        android:background="@color/secondary"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="204dp">
+        tools:layout_editor_absoluteY="204dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:layout_width="246dp"
@@ -30,8 +31,8 @@
             android:layout_marginBottom="10dp"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColor="@color/primary"
+            android:textColorHint="@color/primary" />
 
         <EditText
             android:id="@+id/password"
@@ -40,8 +41,8 @@
             android:layout_marginBottom="10dp"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+            android:textColor="@color/primary"
+            android:textColorHint="@color/primary" />
 
 
         <!-- Login Button -->
@@ -51,7 +52,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@null"
+            android:background="@color/primary"
             android:text="@string/btn_login"
             android:textColor="@android:color/white" />
 
