--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -10,26 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-         <ImageView
+            <ImageView
             android:id="@+id/header_cover_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop" android:background="#3a9d23"/>
+            android:scaleType="centerCrop"
+            android:background="@color/primaryLight"/>
 
-        />
-
-        <ImageButton
+            <ImageButton
             android:id="@+id/ib_image_utilisateur"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_below="@+id/header_cover_image"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-80dp"
+            android:layout_marginTop="-140dp"
             android:background="@drawable/messenger_button_send_round_shadow"
             android:elevation="5dp"
             android:padding="20dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/usericon" />
+            android:src="@drawable/usericon"> </ImageButton>
 
         <RelativeLayout
             android:id="@+id/profile_layout"
