--- a/app/src/main/res/layout/activity_creer_chamionnat.xml
+++ b/app/src/main/res/layout/activity_creer_chamionnat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,49 +7,54 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context="com.masquilierpemeja.rugbyfantasytop14.CreerChampionnat.CreerChampionnatActivity">
-    
+
     <EditText
-        android:hint="Nom du championnat"
         android:id="@+id/ed_nom_championnat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textCapWords"
-        />
+        android:layout_above="@+id/sp_nombre_de_joueur"
+        android:layout_alignParentStart="true"
+        android:hint="Nom du championnat"
+        android:inputType="textCapWords" />
 
     <Spinner
         android:id="@+id/sp_nombre_de_joueur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="30dp">
-
-
+        android:layout_above="@+id/sw_est_public"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="62dp"
+        android:padding="20dp">
     </Spinner>
 
     <Switch
         android:id="@+id/sw_est_public"
-        android:text="Privé"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:padding="30dp"
-        />
+        android:text="Privé" />
 
     <EditText
-        android:hint="Mot de passe"
         android:id="@+id/ed_mot_de_passe"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/sw_est_public"
+        android:layout_toEndOf="@+id/pb_load"
+        android:hint="Mot de passe"
         android:inputType="textCapWords"
-        android:padding="30dp"
-        />
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/btn_creer_championnat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Créer mon championnat"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="25dp"
         android:background="@color/primary"
-        />
+        android:text="Créer mon championnat" />
 
     <ProgressBar
         android:visibility="gone"
@@ -60,4 +65,4 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
