--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,21 +10,20 @@
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="388dp"
         android:layout_height="fill_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/primary"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
 
 
         <ImageView
-            android:layout_width="@dimen/logo_w_h"
-            android:layout_height="@dimen/logo_w_h"
+            android:layout_width="190dp"
+            android:layout_height="140dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="30dp"
-            android:src="@mipmap/ic_launcher" />
-
+            android:src="@drawable/image_rugby" />
 
 
         <EditText
@@ -35,10 +34,8 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@android:color/white" />
-
-
-
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white" />
 
 
         <EditText
@@ -50,8 +47,8 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@android:color/white">
-        </EditText>
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"></EditText>
 
 
         <Button
@@ -60,9 +57,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
+            android:background="null"
             android:text="@string/action_sign_in_short"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <!-- Link to Login Screen -->
