--- a/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
+++ b/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
-        android:background="@color/primary">
+        android:background="@color/secondaryLight">
 
 
         <ImageView
@@ -28,7 +28,7 @@
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textColor="@android:color/white"
+            android:textColor="@color/primary"
             android:textSize="20dp" />
 
         <TextView
@@ -38,7 +38,7 @@
             android:gravity="center_horizontal"
             android:padding="@dimen/activity_horizontal_margin"
             android:text="@string/forgot_password_msg"
-            android:textColor="@android:color/white"
+            android:textColor="@color/primary"
             android:textSize="14dp" />
 
 
@@ -50,8 +50,8 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white" />
+                android:textColor="@color/primary"
+                android:textColorHint="@color/primary" />
 
         <!-- Login Button -->
 
@@ -60,7 +60,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@null"
+            android:background="@color/primary"
             android:text="@string/btn_reset_password"
             android:textColor="@android:color/white" />
 
@@ -71,7 +71,7 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="@string/btn_back"
-            android:textColor="@color/white" />
+            android:textColor="@color/primary" />
 
     </LinearLayout>
 
