--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,16 +13,35 @@
         android:id="@+id/btn_go_to_mon_profil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="37dp"
+        android:background="#fff"
+        android:backgroundTint="@color/primary"
+        android:clickable="true"
+        android:elevation="4dp"
+        android:layout_margin="5dp"
         android:text="Mon profil"
+        android:textColor="@color/secondaryLight"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="36dp" />
 
-    
+
     <Button
         android:id="@+id/btn_go_to_creer_championnat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btn_go_to_mon_profil"
+        android:layout_marginTop="41dp"
+        android:background="#fff"
+        android:backgroundTint="@color/primaryLight"
+        android:clickable="true"
+        android:layout_margin="5dp"
+
+        android:elevation="4dp"
         android:text="Créer mon championnat"
+        android:textColor="@color/secondaryLight"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="106dp" />
 
@@ -30,17 +49,35 @@
         android:id="@+id/btn_go_to_rejoindre_championnat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btn_go_to_creer_championnat"
+        android:layout_marginTop="34dp"
+        android:background="#fff"
+        android:backgroundTint="@color/primaryLight"
+        android:layout_margin="5dp"
+
+        android:clickable="true"
+        android:elevation="4dp"
         android:text="Rejoindre un championnat"
-        tools:layout_editor_absoluteY="176dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:textColor="@color/secondaryLight"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="176dp" />
 
     <Button
         android:id="@+id/btn_deconnexion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Déconnexion"
-        tools:layout_editor_absoluteY="249dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:backgroundTint="#ff6659"
+        android:layout_margin="5dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp"
+        android:background="#fff"
+        android:clickable="true"
+        android:elevation="4dp"
+        android:textColor="@color/secondaryLight"
+        android:layout_alignParentBottom="true"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
