--- a/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
+++ b/app/src/main/res/layout/activity_mot_de_passe_oublie.xml
@@ -28,7 +28,8 @@
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
             android:text="@string/lbl_forgot_password"
-            android:textColor="@color/primary"
+            android:textColor="@color/primaryDark"
+            android:textStyle="bold"
             android:textSize="20dp" />
 
         <TextView
@@ -38,7 +39,7 @@
             android:gravity="center_horizontal"
             android:padding="@dimen/activity_horizontal_margin"
             android:text="@string/forgot_password_msg"
-            android:textColor="@color/primary"
+            android:textColor="@color/primaryDark"
             android:textSize="14dp" />
 
 
@@ -71,7 +72,7 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="@string/btn_back"
-            android:textColor="@color/primary" />
+            android:textColor="@color/primaryDark" />
 
     </LinearLayout>
 
