--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="76dp"
-                android:textColor="#fff"
+                android:textColor="@color/primaryDark"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -57,7 +57,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
                 android:text="Nouveau joueur RugbyFantasy"
-                android:textColor="#fff"
+                android:textColor="@color/primary"
                 android:textSize="14sp" />
         </RelativeLayout>
 
