--- a/app/src/main/res/layout/activity_page_championnat.xml
+++ b/app/src/main/res/layout/activity_page_championnat.xml
@@ -8,12 +8,13 @@
 
 
     <TextView
+        android:id="@+id/tv_titre_championnat"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
-        android:text="Bienvenue dans votre championnat"
+        android:text=""
         android:textColor="@color/primaryDark"
         android:textStyle="bold"
         android:textSize="20dp" />
