--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_mon_equipe"
+        android:icon="@drawable/ic_team"
+        android:title="Mon equipe" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_classement"
+        android:icon="@drawable/ic_list_classement"
+        android:title="Classement" />
+
+    <item
+        android:id="@+id/navigation_calendrier"
+        android:icon="@drawable/ic_calendar"
+        android:title="Calendrier" />
 
 </menu>
