--- a/app/src/main/res/layout/fragment_page_championnat.xml
+++ b/app/src/main/res/layout/fragment_page_championnat.xml
@@ -7,8 +7,11 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/test_nom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:text="" />
 
 </FrameLayout>
