--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_mon_equipe"
         android:icon="@drawable/ic_team"
-        android:title="Mon equipe" />
+        android:title="Mon equipeTop14" />
 
     <item
         android:id="@+id/navigation_classement"
