--- a/app/src/main/res/layout/fragment_calendrier.xml
+++ b/app/src/main/res/layout/fragment_calendrier.xml
@@ -4,10 +4,29 @@
     android:layout_height="match_parent"
     tools:context="com.masquilierpemeja.rugbyfantasytop14.Calendrier.CalendrierFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+
+
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_marginTop="50dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="La saison n'a pas encore débuté !"
+
+            android:textSize="25dp"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
