--- a/app/src/main/res/layout/fragment_mon_equipe.xml
+++ b/app/src/main/res/layout/fragment_mon_equipe.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/terrain"
+        android:paddingTop="40dp"
         >
 
         <LinearLayout
