--- a/app/src/main/res/layout/fragment_page_championnat.xml
+++ b/app/src/main/res/layout/fragment_page_championnat.xml
@@ -26,9 +26,9 @@
     <ListView
         android:id="@+id/listView_championnat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:elevation="4dp">
 
     </ListView>
 
