--- a/app/src/main/res/layout/adapter_view_actualite.xml
+++ b/app/src/main/res/layout/adapter_view_actualite.xml
@@ -13,7 +13,9 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp">
+        android:layout_marginBottom="25dp"
+        android:clickable="true"
+        android:elevation="4dp">
 
         <TextView
             android:layout_marginTop="5dp"
@@ -23,6 +25,9 @@
             android:layout_height="wrap_content"
             android:text="TITRE DE L'ARTICLE"
             android:textSize="25dp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:elevation="4dp"
             />
 
         <TextView
