--- a/app/src/main/res/layout/fragment_classement.xml
+++ b/app/src/main/res/layout/fragment_classement.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="wrap_content"
-        android:weightSum="109">
+        android:weightSum="109"
+        android:background="#fff"
+        android:elevation="4dp"
+        >
 
 
         <TextView
@@ -49,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="19"
-            android:text="E"
+            android:text="N"
             android:textSize="25dp"
             android:textStyle="bold"/>
 
