--- a/app/src/main/res/layout/fragment_mon_equipe.xml
+++ b/app/src/main/res/layout/fragment_mon_equipe.xml
@@ -26,7 +26,8 @@
                 android:layout_width="80dp"
                 android:layout_height="50dp"
                 android:layout_weight="20"
-                android:text="1" />
+                android:text="1"
+                />
 
             <Button
                 android:id="@+id/btn_talonneur"
