--- a/app/src/main/res/layout/activity_creer_chamionnat.xml
+++ b/app/src/main/res/layout/activity_creer_chamionnat.xml
@@ -95,13 +95,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:backgroundTint="@color/primary"
         android:text="Créer mon championnat"
-        android:textColor="@color/secondaryLight"
-        android:elevation="4dp"
         android:layout_margin="5dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp"
+        android:background="@color/primary"
+        android:elevation="10dp"
+        android:textColor="@color/secondaryLight"
         />
 
 
