--- a/app/src/main/res/layout/activity_rejoindre_championnat.xml
+++ b/app/src/main/res/layout/activity_rejoindre_championnat.xml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.masquilierpemeja.rugbyfantasytop14.RejoindreChampionnat.RejoindreChampionnatActivity">
+    tools:context="com.masquilierpemeja.rugbyfantasytop14.RejoindreChampionnat.RejoindreChampionnatActivity"
+    android:id="@+id/LL_pincipale">
 
-
-    <ListView
-        android:id="@+id/lv_championnats"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/ll_une_liste"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp"></ListView>
+        android:orientation="vertical">
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/lv_championnats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="100"></ListView>
+
+
+        <Button
+            android:id="@+id/btn_creer_championnat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:text="Créer mon championnat"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="@color/primary"
+            android:elevation="10dp"
+            android:textColor="@color/secondaryLight"
+            />
+
+
+    </LinearLayout>
+
+</RelativeLayout>
